# document_analysis

./: README.md  output.yaml  pyproject.toml
src/document_analisis/: app.py  main.py
src/document_analisis/config/: agents.yaml  document_thematician.yaml  identify_document_theme_task.yaml  tasks.yaml
src/document_analisis/templates/: index.html  result.html
src/document_analisis/tools/: custom_tool.py  text_tools.py
